--- a/Text-clustering.ipynb
+++ b/Text-clustering.ipynb
@@ -281,7 +281,7 @@
         "id": "Kosqpu72wAou"
       },
       "source": [
-        "#Homework 5 - Text clustering -sample code\n",
+        "#Homework 5 - Text clustering\n",
         "** Prepare datasets**\n",
         "Download dataset movie_data_60.csv from google drive\n"
       ]
